src/objects/acfBank_Detail__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>acfAttachmentId__c</fullName>
        <description>Click Loans</description>
        <label>Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfBankSlugName__c</fullName>
        <description>Click Loans</description>
        <label>Bank Slug Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfBank_Logo__c</fullName>
        <description>Click Loans</description>
        <formula>IMAGE( acfImage_URL__c , &apos;Bank Logo&apos; , 50, 100)</formula>
        <label>Bank Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfBank_Name__c</fullName>
        <description>Click Loans</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfBank_Short_Name__c</fullName>
        <description>Click Loans</description>
        <label>Bank Short Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfImage_URL__c</fullName>
        <description>Click Loans</description>
        <formula>IF( acfAttachmentId__c &lt;&gt; null, &quot;/servlet/servlet.FileDownload?file=&quot;  &amp;  acfAttachmentId__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfUserAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>User API</label>
        <type>Checkbox</type>
    </fields>
    <label>Click Loans Bank Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acfBank_Logo__c</columns>
        <columns>acfBank_Name__c</columns>
        <columns>acfBank_Short_Name__c</columns>
        <columns>acfBankSlugName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BNK{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>